--- a/.gitignore
+++ b/.gitignore
@@ -340,4 +340,7 @@ buildNumber.properties
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
+# ENV PROPERTIES
+/env.properties
+
 # End of https://www.toptal.com/developers/gitignore/api/java,maven,eclipse,intellij,intellij+iml,intellij+all
