new properties log debug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.application.name=staff-management
 server.port = ${PORT}
 spring.output.ansi.enabled=ALWAYS
 
+logging.level.org.springframework.web= DEBUG
+logging.level.org.hibernate= ERROR
+
 # DATABASE
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
